---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..4,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "\n# not a comment ",
        ),
        4..21,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Lbrace,
        21..22,
    ),
    (
        Comment,
        23..34,
    ),
    (
        NonLogicalNewline,
        34..35,
    ),
    (
        Name(
            Name("x"),
        ),
        39..40,
    ),
    (
        NonLogicalNewline,
        40..41,
    ),
    (
        Rbrace,
        41..42,
    ),
    (
        FStringMiddle(
            " # not a comment\n",
        ),
        42..59,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringEnd,
        59..62,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Newline,
        62..62,
    ),
]
```
